updated to push site

--- a/index.html
+++ b/index.html
@@ -43,10 +43,31 @@
         <main>
             
             <section class="projects">
+                <h2 class="section-heading">Projects</h2>
+                <!-- <p>Projects I have worked on</p> -->
+                <ul class="projects-gallery">
+                    <li><img src="assets/p-1.jpg" alt=""></li>
+                    <li><img src="assets/p-2.jpg" alt=""></li>
+                    <li><img src="assets/p-3.jpg" alt=""></li>
+                    <li><img src="assets/p-4.jpg" alt=""></li>
+                    <li><img src="assets/p-5.jpg" alt=""></li>
+                    <li><img src="assets/p-6.jpg" alt=""></li>
+                </ul>
 
             </section>
             <section class="about">
+                <!-- <h2 class="section-heading-alt">About Me</h2>
+                <h3>Nigel Mansell</h3>
+                <p>I'm a web developer based in Toronto, Canada.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, amet.</p>
+                <ul class="about-social-links">
+                    <li><i class="fab fa-facebook fa-2x"></i></li>
+                    <li><i class="fab fa-twitter fa-2x"></i></li>
+                    <li><i class="fab fa-github fa-2x"></i></li>
+                </ul>
 
+                <div class="about-box">
+                    <img src="/assets/525.jpg" alt="Picture of Nigel Mansell">
+                </div> -->
             </section>
             <section class="skills">
 
