fixed pathing issue

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="hire-me" href=""><i class="fas fa-envelope"></i>Hire Me</a> 
                     </div>
                     <div class="box">
-                        <img src="/assets/660.jpg" alt="Picture of Nigel Mansell">
+                        <img src="assets/660.jpg" alt="Picture of Nigel Mansell">
                     </div>
             </section>
         </header>
@@ -66,7 +66,7 @@
                 </ul>
 
                 <div class="about-box">
-                    <img src="/assets/525.jpg" alt="Picture of Nigel Mansell">
+                    <img src="assets/525.jpg" alt="Picture of Nigel Mansell">
                 </div> -->
             </section>
             <section class="skills">
