minor fixes and changes fixed pathing, added favicon, centered project gallery

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nigel Mansell</title>
+    <title>Nigel Rudolf Mansell</title>
     <!-- font-awesome, google-fonts, adobe-typekit -->
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9358576662.js" crossorigin="anonymous"></script>
     <script src="script.js" defer></script>
@@ -56,7 +57,7 @@
 
             </section>
             <section class="about">
-                <!-- <h2 class="section-heading-alt">About Me</h2>
+                <h2 class="section-heading-alt">About Me</h2>
                 <h3>Nigel Mansell</h3>
                 <p>I'm a web developer based in Toronto, Canada.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, amet.</p>
                 <ul class="about-social-links">
@@ -67,7 +68,7 @@
 
                 <div class="about-box">
                     <img src="assets/525.jpg" alt="Picture of Nigel Mansell">
-                </div> -->
+                </div>
             </section>
             <section class="skills">
 
