About Me Section fully responsive

--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
             <section class="about">
                 <div class="wrapper">
                     <div class="about-info">
-                        <h2 class="section-heading-alt">About Me</h2>
-                        <h3 class="section-heading">Nigel Mansell</h3>
-                        <p>I'm a web developer based in Toronto, Canada.Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, amet.</p>
+                        <div class="heading-and-name">
+                            <h2 class="section-heading-alt">About Me</h2>
+                            <h3 class="section-heading">Nigel Mansell</h3>
+                        </div>
+                        <p>I'm a web developer based in Toronto, Canada. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, amet.</p>
                         <ul class="about-social-links">
                             <li><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
                             <li><a href=""><i class="fab fa-twitter fa-2x"></i></a></li>
                             <li><a href=""><i class="fab fa-github fa-2x"></i></a></li>
                         </ul>
-
-                        <a href=""></a>
                     </div>
                     <div class="about-box">
                         <img src="assets/525.jpg" alt="Picture of Nigel Mansell">
