About me section, fully responsive cleaned up css

--- a/index.html
+++ b/index.html
@@ -60,12 +60,14 @@
                             <h2 class="section-heading-alt">About Me</h2>
                             <h3 class="section-heading">Nigel Mansell</h3>
                         </div>
-                        <p>I'm a web developer based in Toronto, Canada. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, amet.</p>
-                        <ul class="about-social-links">
-                            <li><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
-                            <li><a href=""><i class="fab fa-twitter fa-2x"></i></a></li>
-                            <li><a href=""><i class="fab fa-github fa-2x"></i></a></li>
-                        </ul>
+                        <div class="text-social">
+                            <p>I'm a web developer based in Toronto, Canada. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit, amet.</p>
+                            <ul class="about-social-links">
+                                <li><a href=""><i class="fab fa-facebook fa-2x"></i></a></li>
+                                <li><a href="https://twitter.com/nigelrudolf" target="_blank"><i class="fab fa-twitter fa-2x"></i></a></li>
+                                <li><a href=""><i class="fab fa-github fa-2x"></i></a></li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="about-box">
                         <img src="assets/525.jpg" alt="Picture of Nigel Mansell">
@@ -73,7 +75,7 @@
                 </div>
             </section>
             <section class="skills">
-
+                <h2 class="section-heading">Skills</h2>
             </section>
             <section class="testimonial">
 
