--- a/index.html
+++ b/index.html
@@ -74,21 +74,20 @@
                     </div>
                 </div>
             </section>
-            <section class="skills">
+            <!-- <section class="skills">
                 <h2 class="section-heading">Skills</h2>
             </section>
-            <section class="testimonial">
+            <section class="testimonial">s
 
             </section>
             <section class="contact">
 
-            </section>
+            </section> -->
         </main>
-    <footer>
+    <!-- <footer>
         <ul class="footer-link">
-            <li><a href=""></a></li>
         </ul>
-    </footer>
+    </footer> -->
     
 </body>
 <script src='https://code.jquery.com/jquery-3.4.0.min.js' integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
