--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h2 class="logo">Nigel<span class="highlight-alt">.</span></h2>
             <button class="mobile-menu-button"><i class="fas fa-bars fa-3x"></i></button>
             <nav class="header-nav sr-only">
-                <ul>
+                <ul class="header-nav-links">
                     <li><a href="#projects">projects</a></li>
                     <li><a href="#about-me">about</a></li>
                     <li><a href="#contact">contact</a></li>
