--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                         <p>I'm a web developer based in Toronto, Canada. Lorem, ipsum dolor sit amet consectetur
                             adipisicing elit. Odit, amet.</p>
                         <ul class="about-social-links">
-                            <li><a href="" target="_blank" rel="noopener noreferrer"><i
+                            <li class="social-link"><a href="" target="_blank" rel="noopener noreferrer"><i
                                         class="fab fa-facebook fa-2x"></i></a></li>
-                            <li><a href="https://twitter.com/nigelrudolf" target="_blank" rel="noopener noreferrer"><i
-                                        class="fab fa-twitter fa-2x"></i></a></li>
-                            <li><a href="https://github.com/nigelrudolf" target="_blank" rel="noopener noreferrer"><i
-                                        class="fab fa-github fa-2x"></i></a></li>
+                            <li class="social-link"><a href="https://twitter.com/nigelrudolf" target="_blank"
+                                    rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a></li>
+                            <li class="social-link"><a href="https://github.com/nigelrudolf" target="_blank"
+                                    rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -124,7 +124,7 @@
                     <label for="_replyto">Email</label>
                     <input type="email" id="_replyto" name="_replyto" placeholder="Enter email" required>
                     <label for="message">Message</label>
-                    <textarea id="message" name="message" rows="8" placeholder="Enter your message" required></textarea>
+                    <textarea id="message" name="message" placeholder="Enter your message" required></textarea>
                     <input class="send-button" type="submit" value="Send">
                 </form>
             </div>
@@ -135,11 +135,12 @@
         <div class="logo-links">
             <h2>Nigel<span class="highlight-alt">.</span></h2>
             <ul class="footer-links">
-                <li><a href="" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook fa-2x"></i></a></li>
-                <li><a href="https://twitter.com/nigelrudolf" target="_blank" rel="noopener noreferrer"><i
-                            class="fab fa-twitter fa-2x"></i></a></li>
-                <li><a href="https://github.com/nigelrudolf" target="_blank" rel="noopener noreferrer"><i
-                            class="fab fa-github fa-2x"></i></a></li>
+                <li class="social-link"><a href="" target="_blank" rel="noopener noreferrer"><i
+                            class="fab fa-facebook fa-2x"></i></a></li>
+                <li class="social-link"><a href="https://twitter.com/nigelrudolf" target="_blank"
+                        rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a></li>
+                <li class="social-link"><a href="https://github.com/nigelrudolf" target="_blank"
+                        rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a></li>
             </ul>
         </div>
         <div class="copyright-container">
