Fixed social media icons

--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
                         <p>I'm a web developer based in Toronto, Canada. Lorem, ipsum dolor sit amet consectetur
                             adipisicing elit. Odit, amet.</p>
                         <ul class="about-social-links">
-                            <li class="social-link"><a href="" target="_blank" rel="noopener noreferrer"><i
-                                        class="fab fa-facebook fa-2x"></i></a></li>
+                            <li class="social-link"><a href="https://www.linkedin.com/in/nigelrudolf/" target="_blank"
+                                    rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a></li>
                             <li class="social-link"><a href="https://twitter.com/nigelrudolf" target="_blank"
-                                    rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a></li>
+                                    rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></li>
                             <li class="social-link"><a href="https://github.com/nigelrudolf" target="_blank"
-                                    rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a></li>
+                                    rel="noopener noreferrer"><i class="fab fa-github"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -135,12 +135,12 @@
         <div class="logo-links">
             <h2>Nigel<span class="highlight-alt">.</span></h2>
             <ul class="footer-links">
-                <li class="social-link"><a href="" target="_blank" rel="noopener noreferrer"><i
-                            class="fab fa-facebook fa-2x"></i></a></li>
+                <li class="social-link"><a href="https://www.linkedin.com/in/nigelrudolf/" target="_blank"
+                        rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a></li>
                 <li class="social-link"><a href="https://twitter.com/nigelrudolf" target="_blank"
-                        rel="noopener noreferrer"><i class="fab fa-twitter fa-2x"></i></a></li>
+                        rel="noopener noreferrer"><i class="fab fa-twitter"></i></a></li>
                 <li class="social-link"><a href="https://github.com/nigelrudolf" target="_blank"
-                        rel="noopener noreferrer"><i class="fab fa-github fa-2x"></i></a></li>
+                        rel="noopener noreferrer"><i class="fab fa-github"></i></a></li>
             </ul>
         </div>
         <div class="copyright-container">
