Added simple email obfuscation https://devsday.ru/blog/details/16449

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                             Mansell</span></h1>
                     <h2 class="sub-title">Professional web developer</h2>
                 </div>
-                <a class="hire-me" href=""><i class="fas fa-envelope"></i>Hire Me</a>
+                <a class="hire-me" data-key="9cfbf9e8dcf2f5fbf9f0eee9f8f3f0faf1fdf2eff9f0f0b2fffd" href="#"><i
+                        class="fas fa-envelope"></i>Hire Me</a>
             </div>
             <div class="box">
                 <img src="assets/660.jpg" alt="Picture of Nigel Mansell">
