--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </ul>
         </div>
         <div class="copyright-container">
-            <p class="copyright">2020 Nigel Mansell</p>
+            <p class="copyright"></p>
         </div>
     </footer>
 
