Final Updates updated projects section added photos added hover states in projects updated about me description

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         class="fas fa-envelope"></i>Hire Me</a>
             </div>
             <div class="box">
-                <img src="assets/660.jpg" alt="Picture of Nigel Mansell">
+                <img src="assets/nigel.jpg" alt="Picture of Nigel Mansell">
             </div>
         </section>
     </header>
@@ -48,12 +48,120 @@
         <section class="projects-section wrapper" id="projects">
             <h2 class="section-heading">Projects</h2>
             <ul class="projects-gallery">
-                <li><img src="assets/p-1.jpg" alt=""></li>
-                <li><img src="assets/p-2.jpg" alt=""></li>
-                <li><img src="assets/p-3.jpg" alt=""></li>
-                <li><img src="assets/p-4.jpg" alt=""></li>
-                <li><img src="assets/p-5.jpg" alt=""></li>
-                <li><img src="assets/p-6.jpg" alt=""></li>
+                <li>
+                    <div class="project-card">
+                        <div class="project-img"></div>
+                        <div class="project">
+                            <div>
+                                <h3 class="project-heading" role="img" aria-label="picture of DigiPets user interface">
+                                    DigiPets | jQuery</h3>
+                                <p class="project-desc">Take care of your pet. Give your pet treats and watch it do
+                                    tricks.
+                                </p>
+                            </div>
+                            <div>
+                                <a href="https://nigelrudolf.github.io/nigel-mansell-project-three/" target="_blank"
+                                    rel="noopener noreferrer">Live</a>
+                                <a href="https://github.com/nigelrudolf/nigel-mansell-project-three" target="_blank"
+                                    rel="noopener noreferrer">Repo</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="project-card">
+                        <div class="project-img"></div>
+                        <div class="project">
+                            <div>
+                                <h3 class="project-heading" role="img"
+                                    aria-label="picture of Social Media Planner user interface">Social Media Planner |
+                                    React</h3>
+                                <p class="project-desc">Plan your social media posts and post them across various
+                                    platforms
+                                    all from one place.
+                                </p>
+                            </div>
+                            <div>
+                                <a href="https://nigelrudolf.github.io/nigel-mansell-project-five/" target="_blank"
+                                    rel="noopener noreferrer">Live</a>
+                                <a href="https://github.com/nigelrudolf/nigel-mansell-project-five/" target="_blank"
+                                    rel="noopener noreferrer">Repo</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="project-card">
+                        <div class="project-img" role="img"
+                            aria-label="picture of Mars Birthday Card Generator user interface"></div>
+                        <div class="project">
+                            <div>
+                                <h3 class="project-heading">Mars Birthday Card Generator | jQuery</h3>
+                                <p class="project-desc">Generate a birthday card for someone you know using images from
+                                    NASA's Mars Rover Photos API.
+                                </p>
+                            </div>
+                            <div>
+                                <a href="https://nigelrudolf.github.io/mars-birthday-card-generator/" target="_blank"
+                                    rel="noopener noreferrer">Live</a>
+                                <a href="https://github.com/nigelrudolf/mars-birthday-card-generator" target="_blank"
+                                    rel="noopener noreferrer">Repo</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="project-card">
+                        <div class="project-img" role="img" aria-label="picture of Quarantine Pursuit user interface">
+                        </div>
+                        <div class="project">
+                            <div>
+                                <h3 class="project-heading">Quarantine Pursuit | React</h3>
+                                <p class="project-desc">Trivia game with more than 20 categories and 2000 questions.
+                                </p>
+                            </div>
+                            <div>
+                                <a href="https://nigelrudolf.github.io/quarantine-pursuit/" target="_blank"
+                                    rel="noopener noreferrer">Live</a>
+                                <a href="https://github.com/nigelrudolf/quarantine-pursuit/" target="_blank"
+                                    rel="noopener noreferrer">Repo</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="project-card">
+                        <div class="project-img" role="img" aria-label="picture of Luvu.io website"></div>
+                        <div class="project">
+                            <div>
+                                <h3 class="project-heading">Luvu.io | Shopify</h3>
+                                <p class="project-desc">E-Commerce store focusing on Canadian made products.
+                                </p>
+                            </div>
+                            <div>
+                                <a href="https://luvu.io" target="_blank" rel="noopener noreferrer">Live</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="project-card">
+                        <div class="project-img" role="img" aria-label="picture of Drafty.ca website"></div>
+                        <div class="project">
+                            <div>
+                                <h3 class="project-heading">Drafty.ca | PSD Conversion</h3>
+                                <p class="project-desc">Website for architectural technologist providing affordable
+                                    plans
+                                    for affordable homes.
+                                </p>
+                            </div>
+                            <div>
+                                <a href="https://drafty.ca" target="_blank" rel="noopener noreferrer">Live</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
             </ul>
         </section>
 
@@ -65,8 +173,8 @@
                         <h3 class="section-heading">Nigel Mansell</h3>
                     </div>
                     <div class="text-social">
-                        <p>I'm a web developer based in Toronto, Canada. Lorem, ipsum dolor sit amet consectetur
-                            adipisicing elit. Odit, amet.</p>
+                        <p>I'm a web developer based in Toronto, Canada. Recently, I graduated from Juno College where I
+                            studied Front-end web development.</p>
                         <ul class="about-social-links">
                             <li class="social-link"><a href="https://www.linkedin.com/in/nigelrudolf/" target="_blank"
                                     rel="noopener noreferrer"><i class="fab fa-linkedin-in"></i></a></li>
@@ -78,7 +186,7 @@
                     </div>
                 </div>
                 <div class="about-box">
-                    <img src="assets/525.jpg" alt="Picture of Nigel Mansell">
+                    <img src="assets/nigel-2.jpg" alt="Picture of Nigel Mansell">
                 </div>
             </div>
         </section>
@@ -121,7 +229,7 @@
                 <h2 class="section-heading">Contact</h2>
                 <form class="contact-section-form" action="https://formspree.io/xzbjkngj" method="POST">
                     <label for="name">Name</label>
-                    <input type="text" id="name" name="name" placeholder="Enter name" required>
+                    <input type="text" id="name" name="name" placeholder="Full Name" required>
                     <label for="_replyto">Email</label>
                     <input type="email" id="_replyto" name="_replyto" placeholder="Enter email" required>
                     <label for="message">Message</label>
