Changed script tag location

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;900&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/9358576662.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/9358576662.js" crossorigin="anonymous" async></script>
+    <script src='https://code.jquery.com/jquery-3.4.0.min.js'
+        integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous' defer></script>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -258,7 +260,5 @@
     </footer>
 
 </body>
-<script src='https://code.jquery.com/jquery-3.4.0.min.js'
-    integrity='sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg=' crossorigin='anonymous'></script>
 
 </html>
