added open graph

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property='og:title' content='Nigel Mansell | Web Developer, also Entrepreneur' />
+    <meta property='og:image' content='https://nigelrudolfmansell.ca/assets/profile-card.png' />
+    <meta property='og:description' content='Famously known for Yak shaves that turn into careers.' />
+    <meta property='og:url' content='https://nigelrudolfmansell.ca' />
+
     <title>Nigel Rudolf Mansell</title>
     <!-- font-awesome, google-fonts, adobe-typekit -->
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
