--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta property='og:title' content='Nigel Mansell | Web Developer, also Entrepreneur' />
+    <meta property="og:type" content="website">
+    <meta property='og:title' content='Nigel Mansell | Web Developer' />
     <meta property='og:image' content='https://nigelrudolfmansell.ca/assets/profile-card.png' />
-    <meta property='og:description' content='Famously known for Yak shaves that turn into careers.' />
+    <meta property='og:description' content='Exploring headless e-commerce' />
     <meta property='og:url' content='https://nigelrudolfmansell.ca' />
+    <meta name="twitter:card" content="summary_large_image" />
 
     <title>Nigel Rudolf Mansell</title>
     <!-- font-awesome, google-fonts, adobe-typekit -->
